Fixed upload notification z-index issue

--- a/public/css/menu-photos-tab.css
+++ b/public/css/menu-photos-tab.css
@@ -35,6 +35,7 @@ ul.flexly-menu-photos-list li {
     color: #4a4a4a;
     width: 250px;
     padding: 10px;
+    z-index: 30000001;
 }
 
 .photo-upload-notification .info {
